# CraftMan

./: .dockerignore  .gitignore  Cargo.toml  README.md  \  docker-compose.yml  meta.json
bot-server/: .gitignore  Cargo.toml
bot-server/.sqlx/: query-49e51984c331a28e95be5955187076466663110a32d9f58f9f8f437ee2c8c5ee.json  query-b71658a2974a4fd0cd207e7664fde96a19c6acfb337d21a68d35c01c5ddeb27f.json  query-c2a13fd3a3f67f9d4dc044f055283c1a0552fd5cfa1be52497932f5533a548a5.json  query-d3c5b8f54d9e9ce2e74bd17459f5eb0421b2f9bc95315be5134ff6996eaeae2d.json  query-dd12c94cffeeb26240ef5eb2f29135d7dcc42e989feaf2e328173e35f658258f.json
bot-server/logs/: craftman-server.log.2026-05-27  craftman-server.log.2026-05-28  craftman-server.log.2026-05-30  craftman-server.log.2026-05-31
bot-server/migrations/: 20260323205508_guilds.sql
bot-server/src/: main.rs
bot-server/src/mods/: agents.rs  appstate.rs  listener.rs  mod.rs
bot-server/src/mods/bot/: bot_handler.rs  bot_start.rs  chat_channel.rs  configure_guild.rs  connect_to_server.rs  create_monitor.rs  message_chat.rs  mod.rs  props_modals.rs  query_monitor.rs  send_ws.rs  settingscreen.rs  settingsview.rs  si2tr.rs  start_chat.rs  startserver.rs  stop_chat.rs  stopserver.rs
bot-server/src/mods/bot/chat_commands/: chat_channel.rs  message_chat.rs  mod.rs  start_chat.rs
bot-server/src/mods/bot/server_commands/: server_command.rs  startserver.rs  stopserver.rs
bot-server/src/mods/bot/server_commands/properties/: mod.rs  settingsview.rs
craftman-agent/: .gitignore  Cargo.toml
craftman-agent/src/: main.rs
craftman-agent/src/gui/: app.rs  file_explorer.rs  gui_actions.rs  mod.rs  tui.rs
craftman-agent/src/mods/: configs.rs  connect.rs  listener.rs  server_handler.rs  server_process.rs  server_properties.rs  stdout_writer.rs
craftman-server/: .env.example  Cargo.toml  Dockerfile
craftman-server/.sqlx/: query-84d5a12c596074652fd4d6b0c0571e367239154be3be4cfb476f99e909ddd483.json  query-a36a60ab76fc23acfae29ea6ec136ff4f2b180239d1b9d8ba54a89688f68c705.json  query-d5f08ea7a245e9a836375bd5de259b3d26f146e40c9853d837be657a69ca88f1.json
craftman-server/src/: main.rs
craftman-server/src/mods/: agents.rs  appstate.rs  init_tracing.rs  listener.rs  mod.rs
craftman-server/src/mods/bot/: bot_handler.rs  connect_to_server.rs  get_guild.rs  query_monitor.rs
craftman-server/src/mods/bot/chat_commands/: chat_channel.rs  chat_commands_register.rs  message_chat.rs  start_chat.rs  stop_chat.rs
craftman-server/src/mods/bot/server_commands/: mod.rs  startserver.rs  stopserver.rs
craftman-server/src/mods/bot/server_commands/properties/: settingsview.rs
mcserver-agent/: .gitignore  Cargo.toml
mcserver-agent/logs/: app.log.2026-05-25
mcserver-agent/src/: main.rs
mcserver-agent/src/gui/: app.rs  gui.rs  mod.rs
mcserver-agent/src/mods/: appstate.rs  configs.rs  connect.rs  listener.rs  mod.rs  propreader.rs  query_handler.rs  server_handler.rs  server_process.rs  server_properties.rs  stdout_writer.rs  svstarter.rs
migrations/: 20260323205508_guilds.sql
protocal/src/: agentactions.rs
protocol/: Cargo.toml
protocol/src/: agentactions.rs  chat.rs  lib.rs  properties.rs  query_options.rs  server_commands.rs  serveractions.rs
