[package]
name = "bot-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = {version = "0.8.8", features = ["ws"]}
tokio.workspace = true
tower = "0.5.3"
futures-util = "0.3"
serenity = { version = "0.12", features = ["client", "gateway", "rustls_backend", "model", "collector"]}
dotenvy = "0.15"
anyhow = "1"
serde.workspace = true
protocol.workspace = true
serde_json.workspace = true
twilight-http = "0.17"
twilight-model = "0.17"
twilight-util = {version = "0.17", features = ["builder"]}
dashmap = "6"
uuid.workspace = true
tokio-tungstenite = "0.28"
