[package]
name = "bot-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = {version = "0.8.8", features = ["ws"]}
tokio.workspace = true
tower = "0.5.3"
futures-util = "0.3"
serenity = { path = "../../serenity", features = ["client", "gateway", "rustls_backend", "model", "collector"]}
dotenvy = "0.15"
anyhow.workspace =  true
serde.workspace = true
protocol.workspace = true
serde_json.workspace = true
twilight-http = {path = "../../twilight/twilight-http"}
twilight-model = {path = "../../twilight/twilight-model"}
twilight-util = {path = "../../twilight/twilight-util", features = ["builder"]}
dashmap = "6"
uuid.workspace = true
tokio-tungstenite = "0.28"
base64 = "0.22"
