[package]
name = "craftman-agent"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-native-roots"] }
tokio.workspace = true
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
dotenvy = "0.15"
serde.workspace = true
protocol.workspace = true
serde_json.workspace = true
java-properties = {version = "2"}
uuid.workspace = true
anyhow.workspace = true
rust-mc-status = "2"
base64 = "0.22"
dirs = "6.0.0"
directories = "6.0.0"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
ratatui = { version = "0.30.0", features = ["all-widgets"] }
crossterm = { version = "0.29.0", features = ["event-stream"] }
futures = "0.3.32"
ratatui-explorer = "0.3"
tracing-appender = "0.2.5"
rustls = { version = "0.23", features = ["ring"] }
